--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,11 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
 
     <title>Globbid Cunsulting</title>
+    <meta
+      id="meta-ru"
+      name="keywords"
+      content="Госзакупки оптимизация, Услуги B2G, Участие в тендерах, Консалтинговые услуги для госзакупок, Анализ тендерных предложений, Оптимизация закупочных процедур"
+    />
   </head>
   <body>
     <header class="header">
