--- a/expertiza.html
+++ b/expertiza.html
@@ -13,60 +13,78 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
 
     <title>Globbid Cunsulting</title>
+    <meta
+      id="meta-ru"
+      name="keywords"
+      content="Госзакупки оптимизация, Услуги B2G, Участие в тендерах, Консалтинговые услуги для госзакупок, Анализ тендерных предложений, Оптимизация закупочных процедур"
+    />
   </head>
   <body>
     <header class="header">
-        <div class="container">
-            <div class="header-content">
-                <div class="color-black">
-                    <span class="logo">GLOBBID CONSULTING</span>
-                </div>
-                <nav>
-                    <ul class="navbar">
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./solutions.html">Resheniya</a></li>
-                        <li><a href="#">Expertiza</a></li>
-                        <li><a href="./contact.html">Kontakt</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="lang-toggle">Lang</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#" data-lang="en">English</a></li>
-                                <li><a href="#" data-lang="ru">Русский</a></li>
-                                <li><a href="#" data-lang="uz">O'zbek</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Search</a></li>
-                    </ul>
-                </nav>
-            </div>
+      <div class="container">
+        <div class="header-content">
+          <div class="color-black">
+            <span class="logo">GLOBBID CONSULTING</span>
+          </div>
+          <nav>
+            <ul class="navbar">
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./solutions.html">Resheniya</a></li>
+              <li><a href="#">Expertiza</a></li>
+              <li><a href="./contact.html">Kontakt</a></li>
+              <li class="dropdown">
+                <a href="#" class="lang-toggle">Lang</a>
+                <ul class="dropdown-menu">
+                  <li><a href="#" data-lang="en">English</a></li>
+                  <li><a href="#" data-lang="ru">Русский</a></li>
+                  <li><a href="#" data-lang="uz">O'zbek</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Search</a></li>
+            </ul>
+          </nav>
         </div>
+      </div>
     </header>
 
     <section>
       <div class="expertiza_hero_img">
         <div class="expertiza_text">
-          <p>Globbid Consulting объединяет экспертов с многолетним опытом работы в самых сложных и требовательных бизнес-средах. Мы понимаем реальный сектор экономики, знаем, как строить устойчивые стратегии, и берем ответственность за результат.</p>
-          <p style="margin: 1rem auto;">
-            Наш опыт</p>
           <p>
-            Руководство крупными бизнесами
+            Globbid Consulting объединяет экспертов с многолетним опытом работы
+            в самых сложных и требовательных бизнес-средах. Мы понимаем реальный
+            сектор экономики, знаем, как строить устойчивые стратегии, и берем
+            ответственность за результат.
           </p>
+          <p style="margin: 1rem auto">Наш опыт</p>
+          <p>Руководство крупными бизнесами</p>
           <ul>
-            <li> Более 20 лет работы в руководящих позициях международных компаний, включая такие отрасли, как:</li>
+            <li>
+              Более 20 лет работы в руководящих позициях международных компаний,
+              включая такие отрасли, как:
+            </li>
             <li>Машиностроение</li>
             <li>Горнодобывающая промышленность</li>
             <li>Ретейл и социальные проекты</li>
             <li>Финансы и дистрибуция</li>
-            <li>Внедрению ERP-систем по коммерческим блокам и управлению корпоративными данными.</li>
-            <li> Оптимизации закупок и сокращению затрат.</li>
-            <li> Развитию продаж, включая сложные сделки в B2B и B2G.</li>
+            <li>
+              Внедрению ERP-систем по коммерческим блокам и управлению
+              корпоративными данными.
+            </li>
+            <li>Оптимизации закупок и сокращению затрат.</li>
+            <li>Развитию продаж, включая сложные сделки в B2B и B2G.</li>
           </ul>
           <p>Экспертиза в B2G-секторе</p>
           <ul>
             <li>
-              Мы принимали участие в масштабных проектах госзакупок и взаимодействовали с государственными структурами, помогая бизнесу соответствовать требованиям законодательства.
+              Мы принимали участие в масштабных проектах госзакупок и
+              взаимодействовали с государственными структурами, помогая бизнесу
+              соответствовать требованиям законодательства.
             </li>
-            <li> Помогли десяткам компаний выйти на рынок госзакупок и занять там лидирующие позиции.</li>
+            <li>
+              Помогли десяткам компаний выйти на рынок госзакупок и занять там
+              лидирующие позиции.
+            </li>
           </ul>
         </div>
         <div class="img">
@@ -77,79 +95,111 @@
         <div class="img">
           <img src="./img/png/expertiza_hero2.png" alt="" />
         </div>
-        <div class="expertiza_text" style="margin-left: 2rem;">
+        <div class="expertiza_text" style="margin-left: 2rem">
           <p>Ключевые компетенции команды</p>
-          <p>1. Стратегическое управление: <br> - Мы разрабатываем стратегии, которые работают в долгосрочной перспективе, используя анализ рынка и отраслевых трендов.</p>
+          <p>
+            1. Стратегическое управление: <br />
+            - Мы разрабатываем стратегии, которые работают в долгосрочной
+            перспективе, используя анализ рынка и отраслевых трендов.
+          </p>
           <p>2. Управление изменениями и автоматизация</p>
           <ul>
-            <li>Помогали компаниям трансформировать процессы, автоматизировать закупки и внедрять категории менеджмента.</li>
-            <li>Ускорили процессы принятия решений и повысили прозрачность бизнес-процессов.</li>
+            <li>
+              Помогали компаниям трансформировать процессы, автоматизировать
+              закупки и внедрять категории менеджмента.
+            </li>
+            <li>
+              Ускорили процессы принятия решений и повысили прозрачность
+              бизнес-процессов.
+            </li>
           </ul>
           <p>3. Антикризисное управление</p>
-            <ul>
-              <li> Наша команда управляла проектами в сложных экономических условиях, восстанавливая контроль над финансовыми потоками и повышая операционную эффективность.</li>
-              <li>Выстроили устойчивые бизнес-модели для компаний, столкнувшихся с кризисом.</li>
-            </ul>
-            <p>4. Юридическая и контрактная поддержка</p>
-            <ul>
-              <li>Эксперты компании анализируют и составляют контракты, минимизируя риски для клиента.</li>
-              <li>Опыт работы в разрешении спорных вопросов и защите интересов клиентов в рамках контрактов с государственными заказчиками.</li>
-            </ul>
-            <p>Ответственность за масштаб</p>
-          
+          <ul>
+            <li>
+              Наша команда управляла проектами в сложных экономических условиях,
+              восстанавливая контроль над финансовыми потоками и повышая
+              операционную эффективность.
+            </li>
+            <li>
+              Выстроили устойчивые бизнес-модели для компаний, столкнувшихся с
+              кризисом.
+            </li>
+          </ul>
+          <p>4. Юридическая и контрактная поддержка</p>
+          <ul>
+            <li>
+              Эксперты компании анализируют и составляют контракты, минимизируя
+              риски для клиента.
+            </li>
+            <li>
+              Опыт работы в разрешении спорных вопросов и защите интересов
+              клиентов в рамках контрактов с государственными заказчиками.
+            </li>
+          </ul>
+          <p>Ответственность за масштаб</p>
+
           <p>Мы не просто консультируем — мы принимаем участие в реализации:</p>
           <ul>
-            <li>Контроль над активами: Наши специалисты выстраивали системы управления активами стоимостью в миллионы долларов.</li>
-            <li>Результаты в международных компаниях: Мы внедряли стандарты закупок и продаж, которые соответствуют лучшим мировым практикам.</li>
-            <li>Руководство крупными проектами: Включая управление цепочками поставок для международных предприятий</li>
+            <li>
+              Контроль над активами: Наши специалисты выстраивали системы
+              управления активами стоимостью в миллионы долларов.
+            </li>
+            <li>
+              Результаты в международных компаниях: Мы внедряли стандарты
+              закупок и продаж, которые соответствуют лучшим мировым практикам.
+            </li>
+            <li>
+              Руководство крупными проектами: Включая управление цепочками
+              поставок для международных предприятий
+            </li>
           </ul>
         </div>
       </div>
     </section>
 
-  <section class="cta">
-    <div class="cta_1">
-      <p>Our best and latest thinking sent to your inbox</p>
-      <button>Sign up</button>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container_footer">
-      <ul class="ul1">
-        <li><a href="#">Insights</a></li>
-        <li><a href="#">Media</a></li>
-        <li><a href="#">Alumni</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Locations</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <ul class="ul2">
-        <li><img src="./img/png/LinkedIn-3x.png" alt="Linkidin" /></li>
-        <li><img src="./img/png/X-3x.png" alt="X" /></li>
-        <li><img src="./img/png/Facebook-3x.png" alt="Facebook" /></li>
-        <li><img src="./img/png/Instagram-3x.png" alt="Instagram" /></li>
-        <li><img src="./img/png/YouTube-3x.png" alt="YouTube" /></li>
-      </ul>
-      <ul class="ul3">
-        <li><a href="#">Site map</a></li>
-        <li><a href="#">Privacy policy</a></li>
-        <li><a href="#">Legal disclaimer</a></li>
-        <li><a href="#">Client confidentiality</a></li>
-        <li><a href="#">Cookie notice</a></li>
-      </ul>
-      <ul class="ul3">
-        <li><a href="#">Responsible AI use</a></li>
-        <li><a href="#">Do not sell or share my personal information</a></li>
-      </ul>
-      <div>
-        <span class="logo" style="color: #cccccc; font-size: 20px"
-          >GLOBBID CUNSULTING</span
-        >
+    <section class="cta">
+      <div class="cta_1">
+        <p>Our best and latest thinking sent to your inbox</p>
+        <button>Sign up</button>
       </div>
-    </div>
-  </footer>
+    </section>
+
+    <footer>
+      <div class="container_footer">
+        <ul class="ul1">
+          <li><a href="#">Insights</a></li>
+          <li><a href="#">Media</a></li>
+          <li><a href="#">Alumni</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Locations</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="ul2">
+          <li><img src="./img/png/LinkedIn-3x.png" alt="Linkidin" /></li>
+          <li><img src="./img/png/X-3x.png" alt="X" /></li>
+          <li><img src="./img/png/Facebook-3x.png" alt="Facebook" /></li>
+          <li><img src="./img/png/Instagram-3x.png" alt="Instagram" /></li>
+          <li><img src="./img/png/YouTube-3x.png" alt="YouTube" /></li>
+        </ul>
+        <ul class="ul3">
+          <li><a href="#">Site map</a></li>
+          <li><a href="#">Privacy policy</a></li>
+          <li><a href="#">Legal disclaimer</a></li>
+          <li><a href="#">Client confidentiality</a></li>
+          <li><a href="#">Cookie notice</a></li>
+        </ul>
+        <ul class="ul3">
+          <li><a href="#">Responsible AI use</a></li>
+          <li><a href="#">Do not sell or share my personal information</a></li>
+        </ul>
+        <div>
+          <span class="logo" style="color: #cccccc; font-size: 20px"
+            >GLOBBID CUNSULTING</span
+          >
+        </div>
+      </div>
+    </footer>
 
     <script src="./js/main.js"></script>
-</body>
+  </body>
 </html>
