--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 
     <title>Globbid Cunsulting</title>
 
-    <meta id="meta-ru" name="keywords" content="Госзакупки оптимизация, Услуги B2G, Участие в тендерах, Консалтинговые услуги для госзакупок, Анализ тендерных предложений, Оптимизация закупочных процедур">
-    
+    <meta
+      id="meta-ru"
+      name="keywords"
+      content="Госзакупки оптимизация, Услуги B2G, Участие в тендерах, Консалтинговые услуги для госзакупок, Анализ тендерных предложений, Оптимизация закупочных процедур"
+    />
   </head>
   <body>
     <header class="header">
@@ -50,7 +53,7 @@
         <img src="./img/png/hero.png" alt="Hero Background" class="hero-img" />
       </div>
       <div class="hero-text">Делая сложное простым, мы создаем ваш успех</div>
-     <p class="button"> <button>обратитсья </button> </p>
+      <p class="button"><button>обратитсья</button></p>
     </section>
 
     <section class="flex">
@@ -188,8 +191,10 @@
           </p>
           <p class="index_section_title">Наша команда</p>
           <ul>
-            <li>Наши эксперты обладают более чем 15–20 годами опыта в таких ключевых
-              отраслях, как:</li>
+            <li>
+              Наши эксперты обладают более чем 15–20 годами опыта в таких
+              ключевых отраслях, как:
+            </li>
             <li>Машиностроение и горнодобывающая промышленность.</li>
             <li>Ретейл, дистрибуция и финансы.</li>
             <li>Государственные закупки и управление проектами.</li>
