--- a/solutions.html
+++ b/solutions.html
@@ -13,6 +13,11 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
 
     <title>Globbid Cunsulting</title>
+    <meta
+      id="meta-ru"
+      name="keywords"
+      content="Госзакупки оптимизация, Услуги B2G, Участие в тендерах, Консалтинговые услуги для госзакупок, Анализ тендерных предложений, Оптимизация закупочных процедур"
+    />
   </head>
   <body>
     <header class="header">
@@ -80,7 +85,7 @@
         </div>
       </div>
       <div class="solution_hero_img">
-        <div class="solution_text" style="margin-left: 2rem;">
+        <div class="solution_text" style="margin-left: 2rem">
           <p>2. SOS (Экстренная помощь)</p>
           <p>
             Если вы уже участвуете в тендере, но столкнулись с проблемами, мы
@@ -99,7 +104,7 @@
         </div>
         <div class="img">
           <img src="" alt="" />
-         <p class="risunok">РИСУНОК_7*</p> 
+          <p class="risunok">РИСУНОК_7*</p>
         </div>
       </div>
     </section>
