--- a/solutions.html
+++ b/solutions.html
@@ -63,8 +63,7 @@
       </div>
       <div class="solution_hero_img">
         <div class="img">
-          <img src="" alt="" />
-          <p class="risunok">РИСУНОК_7*</p>
+          <img src="./img/png/solution.webp" alt="" />
         </div>
         <div class="solution_text">
           <p>1. Консультация</p>
@@ -103,8 +102,7 @@
           </p>
         </div>
         <div class="img">
-          <img src="" alt="" />
-          <p class="risunok">РИСУНОК_7*</p>
+          <img src="./img/png/erp-consulting.webp" alt="" />
         </div>
       </div>
     </section>
